--- a/app/assets/stylesheets/quickies.css.scss
+++ b/app/assets/stylesheets/quickies.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Quickies controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.quickie .media-right {
+  background-color: #eee;
+}
+
