--- a/app/views/quickies/_form.html.erb
+++ b/app/views/quickies/_form.html.erb
@@ -4,8 +4,8 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
+		<%= f.input :date %>
     <%= f.association :user_group %>
-    <%= f.association :creator %>
   </div>
 
   <div class="form-actions">
