--- a/app/views/quickies/index.html.erb
+++ b/app/views/quickies/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
+			<th>Date</th>
       <th>User group</th>
       <th>Creator</th>
       <th colspan="3"></th>
@@ -16,8 +17,9 @@
       <tr>
         <td><%= quicky.title %></td>
         <td><%= quicky.description %></td>
-        <td><%= quicky.user_group %></td>
-        <td><%= quicky.creator %></td>
+        <td><%= quicky.date %></td>
+        <td><%= quicky.user_group.name %></td>
+        <td><%= quicky.creator.name %></td>
         <td><%= link_to 'Show', quicky %></td>
         <td><%= link_to 'Edit', edit_quicky_path(quicky) %></td>
         <td><%= link_to 'Destroy', quicky, method: :delete, data: { confirm: 'Are you sure?' } %></td>
