--- a/app/views/quickies/show.html.erb
+++ b/app/views/quickies/show.html.erb
@@ -11,14 +11,19 @@
 </p>
 
 <p>
+  <strong>Date:</strong>
+  <%= @quicky.date %>
+</p>
+
+<p>
   <strong>User group:</strong>
-  <%= @quicky.user_group %>
+  <%= @quicky.user_group.name %>
 </p>
 
 <p>
   <strong>Creator:</strong>
-  <%= @quicky.creator %>
+  <%= @quicky.creator.name %>
 </p>
 
 <%= link_to 'Edit', edit_quicky_path(@quicky) %> |
-<%= link_to 'Back', quickies_path %>
+<%= link_to 'Back', root_path %>
