--- a/app/views/quickies/edit.html.erb
+++ b/app/views/quickies/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing quicky</h1>
+<h1>Editing quickie</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @quicky %> |
+<%= link_to 'Show', @quickie %> |
 <%= link_to 'Back', root_path %>
