--- a/app/views/quickies/vote_changed.js.erb
+++ b/app/views/quickies/vote_changed.js.erb
@@ -1,1 +1,1 @@
-$(".quickie-<%= @quicky.id %> .nb-vote").html("<%= escape_javascript(render partial: 'votes', locals: { quickie: @quicky }) %>");
+$(".quickie-<%= @quickie.id %> .nb-vote").html("<%= escape_javascript(render partial: 'votes', locals: { quickie: @quickie }) %>");
