--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
-<h3>Welcome To User Group Quickies</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<h1 class="text-center">Welcome To User Group Quickies</h1>
+<div class="row">&nbsp;</div>
+<div class="row">&nbsp;</div>
+<!-- <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p> -->
 
 <div class="container">
 	<div class="row text-center">
@@ -11,6 +13,7 @@
 		</div>
 	</div>
 	<div class="row">&nbsp;</div>
+	<div class="row"><%= link_to "Add new quickie", new_quickie_path %></div>
   <div class="row">
     <!-- Past quickies -->
     <div class="col-md-6">
