--- a/app/views/quickies/_form.html.erb
+++ b/app/views/quickies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@quicky) do |f| %>
+<%= simple_form_for(@quickie) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
