--- a/app/views/quickies/_show.html.erb
+++ b/app/views/quickies/_show.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="media-body col-md-6">
     <h4 class="media-heading">
-      <%= link_to quickie.title, quicky_path(quickie) %>
+      <%= link_to quickie.title, quickie_path(quickie) %>
     </h4>
     <%= quickie.description %>
   </div>
