--- a/app/views/quickies/show.html.erb
+++ b/app/views/quickies/show.html.erb
@@ -2,28 +2,33 @@
 
 <p>
   <strong>Title:</strong>
-  <%= @quicky.title %>
+  <%= @quickie.title %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @quicky.description %>
+  <%= @quickie.description %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @quicky.date %>
+  <%= @quickie.date %>
 </p>
 
 <p>
   <strong>User group:</strong>
-  <%= @quicky.user_group.name %>
+  <%= @quickie.user_group.name %>
 </p>
 
 <p>
   <strong>Creator:</strong>
-  <%= @quicky.creator.name %>
+  <%= @quickie.creator.name %>
 </p>
 
-<%= link_to 'Edit', edit_quicky_path(@quicky) %> |
+<% if policy(@quickie).update? %>
+	<%= link_to 'Edit', edit_quickie_path(@quickie) %> |
+<% end %>
 <%= link_to 'Back', root_path %>
+<% if policy(@quickie).destroy? %>
+| <%= link_to 'Destroy', @quickie, confirm: 'Are you sure?', method: :delete %>
+<% end %>
