--- a/app/views/quickies/new.html.erb
+++ b/app/views/quickies/new.html.erb
@@ -1,5 +1,5 @@
+<% content_for :title do "Creating new quickie | UgQuickies" end %>
+
 <h1>New quickie</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', root_path %>
