--- a/app/views/quickies/_form.html.erb
+++ b/app/views/quickies/_form.html.erb
@@ -2,13 +2,14 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-		<%= f.input :date %>
-    <%= f.association :user_group %>
+    <%= f.input :title, required: :true %>
+    <%= f.input :description, required: :true %>
+    <%= f.input :date, required: :true, as: :date_time_picker, "data-format" => "dd/MM/yyyy hh:mm"  %>
+    <%= f.association :user_group, required: :true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-actions text-right">
+    <%= link_to "Cancel", :back, { class: "btn btn-default" } %>
+    <%= f.button :submit, { class: "btn-primary" } %>
   </div>
 <% end %>
