--- a/app/views/quickies/edit.html.erb
+++ b/app/views/quickies/edit.html.erb
@@ -1,6 +1,5 @@
+<% content_for :title do "Editing " + @quickie.title + " at " + @quickie.user_group.name + " | UgQuickies" end %>
+
 <h1>Editing quickie</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @quickie %> |
-<%= link_to 'Back', root_path %>
