--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,14 +1,22 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-    <h3>Change your password</h3>
+<div class="row">
+  <h1>Change your password</h1>
+
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'col-md-offset-4 col-md-4' }) do |f| %>
+
     <%= devise_error_messages! %>
-    <%= f.hidden_field :reset_password_token %>
-    <div class="form-group">
-      <%= f.label :password, 'New password' %>
-        <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
-      <%= f.label :password_confirmation, 'Confirm new password' %>
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+
+    <div class="form-inputs">
+      <%= f.hidden_field :reset_password_token %>
+      <div class="form-group">
+        <%= f.label :password, 'New password' %>
+          <%= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control' %>
+        <%= f.label :password_confirmation, 'Confirm new password' %>
+          <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
+      </div>
     </div>
-     <%= f.submit 'Change my Password', :class => 'button right' %>
+  
+    <div class="form-actions pull-right">
+      <%= f.submit 'Change my Password', :class => 'btn btn-primary3' %>
+    </div>
   <% end %>
 </div>
