--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,20 @@
-<div class="authform">
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post, :role => 'form'}) do |f| %>
-    <h3>Forgot your password?</h3>
-    <p>We'll send password reset instructions.</p>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
-    </div>
-     <%= f.submit 'Reset Password', :class => 'button right' %>
-  <% end %>
+<div class="row">
+	<h1>Forgot your password?</h1>
+
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, role: 'form', class: 'col-md-offset-4 col-md-4' }) do |f| %>
+
+	  <p>We'll send password reset instructions.</p>
+	  <%= devise_error_messages! %>
+
+	  <div class="form-inputs">
+	    <div class="form-group">
+	      <%= f.label :email %>
+	      <%= f.email_field :email, :autofocus => true, class: 'form-control' %>
+	    </div>
+	  </div>
+
+	  <div class="form-actions pull-right">
+	    <%= f.submit 'Reset Password', :class => 'btn btn-primary' %>
+	  </div>
+	<% end %>
 </div>
