--- a/app/views/commontator/comments/_form.html.erb
+++ b/app/views/commontator/comments/_form.html.erb
@@ -21,9 +21,7 @@
   </div>
 <% end %>
 
-<%= form_for([commontator, thread, comment],
-             :remote => !no_remote) do |f| %>
-
+<%= form_for([commontator, thread, comment], remote: !no_remote) do |f| %>
   <%= hidden_field_tag :per_page, per_page %>
 
   <div class="comment_form_field">
@@ -32,7 +30,6 @@
   
   <div class="comment_form_actions">
     <%= f.submit t("commontator.comment.actions.#{comment.id.blank? ? 'create' : 'update'}"), class: "btn btn-primary" %>
-    <%= f.submit t('commontator.comment.actions.cancel'), :name => 'cancel', class: "btn btn-default" %>
+    <%= f.submit t('commontator.comment.actions.cancel'), name: 'cancel', class: "btn btn-default" %>
   </div>
-  
 <% end %>
