--- a/app/views/quickies/_votes.html.erb
+++ b/app/views/quickies/_votes.html.erb
@@ -1,4 +1,4 @@
-Votes :
+<%= t('quickies.votes') %> :
 <%= quickie.votes_for.up.size %>
 <% if (current_user) %>
   <% if (current_user.voted_for? quickie) %>
