--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,36 +1,35 @@
-<% content_for :title do "Welcome To User Group Quickies | UgQuickies" end %>
+<% content_for :title do t('home.welcome') + " | UgQuickies" end %>
 
-<h1 class="text-center">Welcome To User Group Quickies</h1>
+<h1 class="text-center"><%= t('home.welcome') %></h1>
 <div class="row">&nbsp;</div>
 <div class="row">&nbsp;</div>
-<!-- <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p> -->
 
 <div class="row text-center">
-	<div class="btn-group" role="group">
-		<%= link_to 'All', root_path, class: "btn #{class_name_for_all}", role: 'button' %>
-		<% @user_groups.each do |user_group| %>
-	    <%= link_to user_group.name, root_path(user_group: user_group.id), class: "btn #{class_name_for(user_group)}", role: 'button' %>
-		<% end %>
-	</div>
+  <div class="btn-group" role="group">
+    <%= link_to t('home.user_groups.all'), root_path, class: "btn #{class_name_for_all}", role: 'button' %>
+    <% @user_groups.each do |user_group| %>
+      <%= link_to user_group.name, root_path(user_group: user_group.id), class: "btn #{class_name_for(user_group)}", role: 'button' %>
+    <% end %>
+  </div>
 </div>
 <div class="row">&nbsp;</div>
 
 <% if policy(Quickie.new).new? %>
-	<div class="row"><%= link_to "Add new quickie", new_quickie_path %></div>
+  <div class="row"><%= link_to t('home.quickies.add_new'), new_quickie_path %></div>
 <% end %>
 <div class="row">
   <!-- Past quickies -->
   <div class="col-md-6">
-    <h2 class="text-center">Past quickies</h2>
+    <h2 class="text-center"><%= t('home.quickies.past.title') %></h2>
     <% if @past_quickies.empty? %>
-      No past quickies yet
+      <%= t('home.quickies.past.none') %>
     <% else %>
       <% @past_quickies.each do |quickie| %>
         <%= render partial: 'quickies/show', locals: { quickie: quickie } %>
       <% end %>
 
     <!-- Top 3 -->
-    <h3 class="text-center">Top 3</h3>
+    <h3 class="text-center"><%= t('home.quickies.top') %></h3>
       <% @past_top3.each do |quickie| %>
         <%= render partial: 'quickies/show', locals: { quickie: quickie } %>
       <% end %>
@@ -40,16 +39,16 @@
 
   <!-- Future quickies -->
   <div class="col-md-6">
-    <h2 class="text-center">Future quickies</h2>
+    <h2 class="text-center"><%= t('home.quickies.future.title') %></h2>
     <% if @future_quickies.empty? %>
-      No future quickies yet
+      <%= t('home.quickies.future.none') %>
     <% else %>
       <% @future_quickies.each do |quickie| %>
         <%= render partial: 'quickies/show', locals: { quickie: quickie } %>
       <% end %>
 
       <!-- Top 3 -->
-      <h3 class="text-center">Top 3</h3>
+      <h3 class="text-center"><%= t('home.quickies.top') %></h3>
       <% @future_top3.each do |quickie| %>
         <%= render partial: 'quickies/show', locals: { quickie: quickie } %>
       <% end %>
