--- a/app/views/quickies/_form.html.erb
+++ b/app/views/quickies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@quickie) do |f| %>
+<%= simple_form_for(@quickie, html: { class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
@@ -9,7 +9,7 @@
   </div>
 
   <div class="form-actions text-right">
-    <%= link_to "Cancel", :back, { class: "btn btn-default" } %>
+    <%= link_to t('simple_form.buttons.cancel'), :back, { class: "btn btn-default" } %>
     <%= f.button :submit, { class: "btn-primary" } %>
   </div>
 <% end %>
